--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,3 +10,9 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+      -
+        name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: false
+          tags: p4a:latest
