--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,4 +15,4 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: kaplan2539/p4a:latest
+          tags: ghcr.io/kaplan2539/p4a:latest
