--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,16 +3,29 @@ name: ci
 on:
   push:
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+      -
+        name: Log in to the Container registry
+        uses: docker/login-action@v3
+        with:
+           registry: ${{ env.REGISTRY }}
+           username: ${{ github.actor }}
+           password: ${{ secrets.GITHUB_TOKEN }}
       -
         name: Build and push
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: ghcr.io/kaplan2539/p4a:latest
+          tags: ghcr.io/${{ env.IMAGE_NAME}}:latest
