--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,6 +10,13 @@ env:
 jobs:
   docker:
     runs-on: ubuntu-latest
+
+    permissions:
+        contents: read
+        packages: write
+        attestations: write
+        id-token: write
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
